--- a/theme/material/multiselect-combo-box-styles.html
+++ b/theme/material/multiselect-combo-box-styles.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../styles/font-icons.html">
+<!-- <link rel="import" href="../../../vaadin-material-styles/font-icons.html"> -->
 <link rel="import" href="../../../vaadin-material-styles/mixins/required-field.html">
 
 <dom-module id="material-multiselect-combo-box" theme-for="multiselect-combo-box">
@@ -86,7 +87,7 @@
 
         :host(.multiselect) [part="content"] [part="item-template"]::before {
           content: var(--material-icons-check);
-          font-family: lumo-icons;
+          font-family: material-icons;
           font-size: var(--material-icon-size-m);
           line-height: 1;
           font-weight: normal;
