seperatley name the material-icon fonts

--- a/styles/font-icons.html
+++ b/styles/font-icons.html
@@ -4,7 +4,7 @@
 <custom-style>
     <style>
       @font-face {
-        font-family: 'material-icons';
+        font-family: 'Material Icons';
         font-style: normal;
         font-weight: 400;
         src: url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
