--- a/theme/material/multiselect-combo-box-styles.html
+++ b/theme/material/multiselect-combo-box-styles.html
@@ -87,7 +87,7 @@
 
         :host(.multiselect) [part="content"] [part="item-template"]::before {
           content: var(--material-icons-check);
-          font-family: material-icons;
+          font-family: "Material Icons";
           font-size: var(--material-icon-size-m);
           line-height: 1;
           font-weight: normal;
