--- a/theme/material/multiselect-combo-box-input-styles.html
+++ b/theme/material/multiselect-combo-box-input-styles.html
@@ -46,14 +46,17 @@
       }
 
       [part="token-remove-button"]::before {
+        font-family: "Material Icons";
         content: var(--material-icons-clear);
       }
 
       [part="clear-button"]::before {
+        font-family: "Material Icons";
         content: var(--material-icons-clear_all);
       }
 
       [part="toggle-button"]::before {
+        font-family: "Material Icons";
         content: var(--material-icons-arrow_drop_down, --material-icons-dropdown);
       }
 
