rename the css variables so they don't clash with the vaadin ones

--- a/theme/material/multiselect-combo-box-styles.html
+++ b/theme/material/multiselect-combo-box-styles.html
@@ -86,8 +86,8 @@
         }
 
         :host(.multiselect) [part="content"] [part="item-template"]::before {
-          content: var(--material-icons-check);
           font-family: "Material Icons";
+          content: var(--google-material-icons-check);
           font-size: var(--material-icon-size-m);
           line-height: 1;
           font-weight: normal;
